--- a/app/views/shared/components/_avatar_pill_expand.html.erb
+++ b/app/views/shared/components/_avatar_pill_expand.html.erb
@@ -1,12 +1,12 @@
 <div class="event-pill-expandable reminder-organiser-avatar">
     <div class="event-pill-inner">
-        <%# if event.user.avatar.present? %>
-            <%#= cl_image_tag event.user.avatar, class: "avatar-small" %>
-        <%# else %>
+        <% if event.user.avatar.attached? %>
+            <%= cl_image_tag event.user.avatar.key, height: 100, width: 100, crop: :fill, class: "avatar-small" %>
+        <% else %>
             <div class="no-image-avatar-small d-flex align-items-center justify-content-center">
                 <p id="no-image-avatar-small-p"><%= event.trip.user.first_name[0].upcase %></p>
             </div>
-        <%# end %>
+        <% end %>
         <div class="event-pill-text">
             <p><%= event.trip.user.first_name %></p>
         </div>
