--- a/app/views/shared/components/_event_registration_row.html.erb
+++ b/app/views/shared/components/_event_registration_row.html.erb
@@ -4,8 +4,8 @@
     <div class="table-header approval-header-sm"><p>Requester</p></div>
     <div class="d-flex align-items-center approval-user">
         
-        <% if element.user.avatar.present? %>
-            <%= cl_image_tag element.user.avatar, class: "avatar" %>
+        <% if element.user.avatar.attached? %>
+            <%= cl_image_tag element.user.avatar.key, height: 100, width: 100, crop: :fill, class: "avatar" %>
         <% else %>
             <div class="no-image-avatar-small d-flex align-items-center justify-content-center">
                 <p id="no-image-avatar-small-p"><%= element.user.first_name[0].upcase %></p>
