--- a/app/views/shared/components/_user_info_block.html.erb
+++ b/app/views/shared/components/_user_info_block.html.erb
@@ -1,8 +1,8 @@
 <div id="user_block">
     <div class="user-info d-flex justify-space-around">
         <div>
-        <% if @trip.user.avatar.present? %>
-            <%= cl_image_tag @trip.user.avatar, class: "avatar-large-itinerary" %>
+        <% if @trip.user.avatar.attached? %>
+            <%= cl_image_tag @trip.user.avatar.key, height: 100, width: 100, crop: :fill, class: "avatar-large-itinerary" %>
         <% else %>
             <div class="no-image-avatar-itinerary d-flex align-items-center justify-content-center">
             <p><%= @trip.user.first_name[0].upcase %></p>
