--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,7 +4,7 @@
         search_title: 'Find events to join',
         path: events_path,
         search_placeholder: 'Search events',
-        elements: @all_events
+        elements: @search_events
     }
 %>
 
@@ -17,7 +17,7 @@
 
 <div class="container__body d-flex justify-content-between">
     <div>
-        <%= render 'shared/events/grouped_events_all', events: @all_events %>
+        <%= render 'shared/events/grouped_events_all', events: @events %>
     </div>
     <div class="">
         <%#= render 'shared/calendar_month', events: @events %>
