FEAT: added activities to discover page

--- a/app/views/pages/_discover.html.erb
+++ b/app/views/pages/_discover.html.erb
@@ -3,6 +3,7 @@
 
 <div class="horizontal-page-divider"></div>
 
+<%= render 'pages/discover/discover_activities' %>
 <%= render 'pages/discover/discover_locations' %>
 <%= render 'pages/discover/discover_trips' %>
 
