--- a/app/views/activities/show/_event_activities.html.erb
+++ b/app/views/activities/show/_event_activities.html.erb
@@ -1,11 +1,11 @@
 <div class="top__ten">
     <div class="container__featured pt-3">
         <div class="featured-title-home">
-            <h2>TOP <%= activity.title.upcase %> EVENTS</h2>
+            <h2>UPCOMING <%= activity.title.upcase %> EVENTS</h2>
         </div>
 
         <div class="card__grid">
-        <% events[0..2].each do |event| %>
+        <% events.each do |event| %>
             <div class="card event-card p-2">
                 <div class="card-body">
                     <div class= "card-date-heart d-flex justify-content-between">
