--- a/app/views/pages/discover/_discover_activities.html.erb
+++ b/app/views/pages/discover/_discover_activities.html.erb
@@ -8,7 +8,7 @@
 
     <div class="card__grid_x4">
         <% @activities.each do |activity| %>
-            <%= render 'shared/cards/activity_card, activity: activity' %>
+            <%= render 'shared/cards/activity_card', activity: activity %>
         <% end %>
     </div>
   </div>
