FEAT: ajax on calendar show

--- a/app/views/locations/show.js.erb
+++ b/app/views/locations/show.js.erb
@@ -1,4 +1,4 @@
 var locationCalendar = document.querySelector('#js-calendar');
-locationCalendar.innerHTML = "<%= j render 'calendar_locations', location_events: @location.events %>"
+locationCalendar.innerHTML = "<%= j render 'locations/by_location/calendar_locations', location_events: @location.events %>"
 
 
