--- a/app/views/activities/show/_banner.html.erb
+++ b/app/views/activities/show/_banner.html.erb
@@ -3,6 +3,6 @@
     rgba(0,0,0,0.5)),
     url('<%= cl_image_path activity.photo.key %>')">
     <div class="banner-container d-flex align-items-center">
-        <h1>Upcoming <%= activity.title %> Inspiration</h1>
+        <h1><%= activity.title %> Inspiration</h1>
     </div>
 </div>
