FEAT: css for trip and events

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,6 +13,7 @@
 @import "container";
 @import "events";
 @import "file_input";
+@import "form";
 @import "heart";
 @import "logo";
 @import "map";
@@ -20,6 +21,7 @@
 @import "pill";
 @import "search";
 @import "sidebar";
+@import "stepper";
 @import "table";
 @import "toggle";
 @import "user_block";
