FEAT: added spots_left and solo logic to events and added to cards

--- a/app/views/shared/cards/_event_half_card.html.erb
+++ b/app/views/shared/cards/_event_half_card.html.erb
@@ -16,7 +16,7 @@
                 <%= event.location.city%>, <%= event.location.country %>
             </p>
             <h6 class="event-spot-left-text">
-                <%#= pluralize(event.spots_left, "spot") %> left
+                <%= pluralize(event.spots_left, "spot") %> left
             </h6>
         </div>
         <div class="d-flex flex-row-reverse bd-highlight">
