--- a/app/views/events/show/_event_description.html.erb
+++ b/app/views/events/show/_event_description.html.erb
@@ -18,7 +18,7 @@
         </p>
         <p>
             <i class="fas fa-user-friends pr-1"></i>
-            <%#= pluralize(event.spots_left, "mate") %> needed
+            <%= pluralize(event.spots_left, "mate") %> needed
         </p>
         <p>
             <i class="fas fa-map-marker-alt pr-1"></i>
