--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -12,6 +12,18 @@
 // UTILITY
 //////////////////////////////////////////////////
 
+.form-media-grid {
+  display: flex;
+}
+
+.form-media-left {
+  margin-right: 0.25rem;
+}
+
+.form-media-right {
+  margin-left: 0.25rem;
+}
+
 .form-container {
   width: 50%;
   margin: 0 25% 0 25%;
@@ -50,4 +62,23 @@
 //////////////////////////////////////////////////
 .basic-details-form {
   padding: 16px 32px 16px 32px;
+}
+
+
+// MEDIA QUERIES
+
+@media(max-width: 1000px) {
+    .form-container {
+      width: 92%;
+      margin: 0 1rem;
+    }
+
+    .form-media-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+
+    .form-media-double {
+      margin-right: 0;
+    }
 }
