--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -123,7 +123,11 @@
 }
 
 // Smallest device
-@media (max-width: 575px) {
+@media (max-width: 1000px) {
+  .navbar, .navbar-mt {
+    display: none;
+  }
+
   .navbar-nav {
     text-align: center;
   }
