--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -22,6 +22,7 @@ $gray-ccc: #ccc;
 $form-border-gray: #ddd;
 $lightish-gray: #F0F0F0;
 $light-gray: #F4F4F4;
+$overlay-gray: rgba(250, 250, 250, 0.32);
 $almost-white: #FAFAFA;
 
 // Travelmates custom colour
