--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,12 @@
 
   <body>      
     <%= render 'shared/navbar' %>
+    <%= render 'shared/sidebar' %>
     <%= render 'shared/flashes' %>
 
-    <%= yield %>
+    <div class="main-content">
+      <%= yield %>
+    </div>
     
     <%= render 'shared/footer' %>
   </body>
