--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,7 @@
     width: 100%;
     background-image: linear-gradient(35deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.8) 80%);
     background-size: cover;
+    background-position: center;
 }
 
 .banner-container {
@@ -19,7 +20,7 @@
         font-size: 4rem;
         font-family: Lato;
         font-weight: 300;
-        text-shadow: 2px 8px 6px rgba(136, 14, 14, 0.4),
+        text-shadow: 2px 8px 6px rgba(3, 32, 44, 0.4),
                     0px -5px 35px rgba(255,255,255,0.3);
     }
 }
