--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -112,7 +112,7 @@
   }
 }
 
-.nav-item-highlighht {
+.nav-item-highlight {
   padding-right: 16px;
   &:hover {
     background-color: $almost-white;
