--- a/app/views/shared/search/_search_main.html.erb
+++ b/app/views/shared/search/_search_main.html.erb
@@ -1,6 +1,6 @@
 <div class="search__box" style="background-image: linear-gradient(rgba(0,0,0,0.5),
 rgba(0,0,0,0.5)),
-url('<%= cl_image_path Location.background_image, crop: :fill%>')">
+url('<%= cl_image_path Activity.background_image, crop: :fill%>')">
 
   <div class="search-banner justify-content-center">
     <!-- Search bar -->
