--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,15 @@
     <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_AUTOCOMPLETE_KEY']}" %>
   </head>
 
-  <body>      
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/sidebar' %>
-    <%= render 'shared/flashes' %>
-
-    <div class="main-content">
-      <%= yield %>
+  <body>
+    <div id="container-wrapper">
+      <%#= render 'shared/navbar' %>
+      <%= render 'shared/sidebar' %>
+      <div class="container__main main-content">
+        <%= yield %>
+        <%= render 'shared/flashes' %>
+        <%= render 'shared/footer' %>
+      </div>
     </div>
-    
-    <%= render 'shared/footer' %>
   </body>
 </html>
