--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,63 +1,106 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-mt">
-  
-  <!-- TravelMates Logo -->
+<ul class="bd-sidebar" id="sidebar">
+<!-- TravelMates Logo -->
+
   <%= link_to root_path, class: "navbar-brand" do %>
     <span class="logo-start">travel</span>
     <span id="logo-end">mates</span>
   <% end %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav">
-      <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "EXPLORE", root_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "FIND TRIPS", trips_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "FIND MATES", events_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%#= link_to "PLAN YOUR TRIP", '#', class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "MANAGE TRIPS", dashboards_path, class: "nav-link" %>
-        </li>
-        
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "EXPLORE", root_path, class: "nav-link" %>
-        </li>
-      <% end %>
-
-      <!-- DISPLAY BUTTON && AVATAR -->
-      <% if user_signed_in? %>
-        <div class="sidebar-primary-button">
-          <%= render "shared/components/button", variant: "filled", label: "CREATE NEW TRIP", path: new_trip_path %>
-        </div>
-        <li class="nav-item dropdown px-2 m-auto">
-          <% if current_user.avatar.attached? %>
-            <div>
-              <%= cl_image_tag current_user.avatar.key, height: 100, width: 100, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <%#= link_to "Profile", user_path(current_user.id), class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-            </div>
-          <% end %>
-        </li>
-
-      <% else %>
-        <div class="sidebar-primary-button">
-          <%= render "shared/components/button", variant: "filled", label: "LOG IN", path:  new_user_session_path %>
-        </div>
-      <% end %>
-
-    </ul>
+  <!-- Avatar & Welcome -->
+  <div class="sidebar-welcome d-flex align-items-center">
+    <%= render "shared/avatars/avatar_sidebar" %>
   </div>
-</div>
+
+  <!-- DISPLAY BUTTON -->
+  <% if user_signed_in? %>
+    <div class="sidebar-primary-button">
+      <%= render "shared/components/button", variant: "filled", label: "CREATE NEW TRIP", path: new_trip_path %>
+    </div>
+  <% else %>
+    <div class="sidebar-primary-button">
+      <%= render "shared/components/button", variant: "filled", label: "LOG IN", path:  new_user_session_path %>
+    </div>
+  <% end %>
+
+  <!-- EXPLORE -->
+  <% if current_page? root_path %>
+    <li class='nav-item active-bar'>
+  <% else %>
+    <li class='nav-item nav-item-highlighht'>
+  <% end %>
+    <%= link_to "EXPLORE", root_path, class: "nav-link" %>
+  </li>
+
+  <!-- FIND A MATE -->
+  <% if current_page? events_path %>
+    <li class='nav-item active-bar'>
+  <% else %>
+    <li class='nav-item nav-item-highlighht'>
+  <% end %>
+    <%= link_to "FIND MATES", events_path, class: "nav-link" %>
+  </li>
+
+  <% if user_signed_in? %>
+    <!-- TRAVEL PLANNER -->
+    <% if current_page? new_trip_path %>
+      <li class='nav-item active-bar'>
+    <% else %>
+      <li class='nav-item nav-item-highlighht'>
+    <% end %>
+      <%= link_to "PLAN YOUR TRIP", new_trip_path, class: "nav-link" %>
+    </li>
+  <% end %>
+
+  <% if user_signed_in? %>
+    <!-- DASHBOARD -->
+    <% if current_page? dashboards_path %>
+      <li class='nav-item active-bar d-flex align-items-center'>
+    <% else %>
+      <li class='nav-item nav-item-highlighht' id='manage-your-trips-with-count'>
+    <% end %>
+      <%= link_to "MANAGE TRIPS", dashboards_path, class: "nav-link" %>
+      <% if current_user %>
+        <div class="badge-upcomings-count d-flex align-items-center justify-content-center">
+          <%= current_user.notifications %>
+        </div>
+      <% end %>
+    </li>
+  <% end %>
+
+
+<!-- SPECIFIC PAGES; CONSOLIDATED -->
+  <!-- ACTVITIES -->
+  <%# if current_page? activities_path %>
+<!--     <li class='nav-item active-bar'>
+ -->  <%# else %>
+<!--     <li class='nav-item nav-item-highlighht'>
+ -->  <%# end %>
+    <%#= link_to "ACTIVITIES", activities_path, class: "nav-link" %>
+<!--   </li>
+ -->
+  <!-- ITINERARY -->
+  <%# if current_page? itineraries_path %>
+<!--     <li class='nav-item active-bar'>
+ -->  <%# else %>
+<!--     <li class='nav-item nav-item-highlighht'>
+ -->  <%# end %>
+    <%#= link_to "ITINERARIES", itineraries_path, class: "nav-link" %>
+<!--   </li>
+ -->
+  <!-- DESTINATIONS -->
+  <%# if current_page? locations_path %>
+<!--     <li class='nav-item active-bar'>
+ -->  <%# else %>
+<!--     <li class='nav-item nav-item-highlighht'>
+ -->  <%# end %>
+    <%#= link_to "DESTINATIONS", locations_path, class: "nav-link" %>
+<!--   </li>
+ -->
+</ul>
+
+
+<!--CL TRANSFORMATION FOR AVATAR :transformation=>[
+  {:width=>400, :height=>400, :gravity=>"face", :radius=>"max", :crop=>"crop"},
+  {:width=>200, :crop=>"scale"}
+  ] -->
+
