--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,63 +1,51 @@
-<div id="nav-button">
-    <div id="top" class="nav-slim-bar"></div>
-    <div id="middle" class="nav-slim-bar"></div>
-    <div id="bottom" class="nav-slim-bar"></div>
-</div>
+<div id="sidebar">
+  <div id="nav-button">
+      <div id="top" class="nav-slim-bar"></div>
+      <div id="middle" class="nav-slim-bar"></div>
+      <div id="bottom" class="nav-slim-bar"></div>
+  </div>
 
-<div class="sidebar">
+  <div class="sidebar bd-sidebar">
 
-    <!-- TravelMates Logo -->
-    <%= link_to root_path, class: "navbar-brand" do %>
-        <span class="logo-start">travel</span>
-        <span id="logo-end">mates</span>
-    <% end %>
-
-
-    <ul class="navbar-nav nav">
-      <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "EXPLORE", root_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "FIND TRIPS", trips_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "FIND MATES", events_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%#= link_to "PLAN YOUR TRIP", '#', class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "MANAGE TRIPS", dashboards_path, class: "nav-link" %>
-        </li>
-        
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "EXPLORE", root_path, class: "nav-link" %>
-        </li>
+      <!-- TravelMates Logo -->
+      <%= link_to root_path, class: "navbar-brand" do %>
+          <span class="logo-start">travel</span>
+          <span id="logo-end">mates</span>
       <% end %>
 
-      <!-- DISPLAY BUTTON && AVATAR -->
+      <!-- Avatar & Welcome -->
+      <div class="sidebar-welcome d-flex align-items-center">
+        <%= render "shared/avatars/avatar_sidebar" %>
+      </div>
+
+      <!-- DISPLAY BUTTON -->
       <% if user_signed_in? %>
         <div class="sidebar-primary-button">
           <%= render "shared/components/button", variant: "filled", label: "CREATE NEW TRIP", path: new_trip_path %>
         </div>
-        <li class="nav-item dropdown px-2 m-auto">
-          <% if current_user.avatar.attached? %>
-            <div>
-              <%= cl_image_tag current_user.avatar.key, height: 100, width: 100, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <%#= link_to "Profile", user_path(current_user.id), class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-            </div>
-          <% end %>
-        </li>
-
       <% else %>
         <div class="sidebar-primary-button">
           <%= render "shared/components/button", variant: "filled", label: "LOG IN", path:  new_user_session_path %>
         </div>
       <% end %>
 
-    </ul>
+      <ul class="nav-sidebar">
+        <%= render partial: 'shared/components/sidebar_links',
+          locals: { link_text: 'EXPLORE', path: root_path }
+        %>
+        <%= render partial: 'shared/components/sidebar_links',
+          locals: { link_text: 'FIND TRIPS', path: trips_path }
+        %>
+        <%= render partial: 'shared/components/sidebar_links',
+          locals: { link_text: 'FIND MATES', path: events_path }
+        %>
+
+        <% if user_signed_in? %>
+          <%= render partial: 'shared/components/sidebar_links',
+            locals: { link_text: 'MANAGE TRIPS', path: dashboards_path }
+          %>
+        <% end %>
+
+      </ul>
+  </div>
 </div>
