--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -189,7 +189,7 @@
 // Card applied to Activity index (listing)
 .photo-card {
     // Dimension
-    height: 180px;
+    height: 10rem;
     width: 100%;
     background-size: cover;
     background-color: $teal;
