--- a/app/views/activities/show/_banner.html.erb
+++ b/app/views/activities/show/_banner.html.erb
@@ -2,7 +2,7 @@
   style="background-image: linear-gradient(rgba(0,0,0,0.5),
     rgba(0,0,0,0.5)),
     url('<%= cl_image_path activity.photo.key %>')">
-    <div class="banner-container d-flex align-items-center">
+    <div class="activity-banner banner-container d-flex align-items-center">
         <h1><%= activity.title %> Inspiration</h1>
     </div>
 </div>
