--- a/app/views/shared/avatars/_avatar_sidebar.html.erb
+++ b/app/views/shared/avatars/_avatar_sidebar.html.erb
@@ -2,8 +2,8 @@
   <% if user_signed_in? && current_user.avatar.present? %>
     <div>
       <%= cl_image_tag current_user.avatar.key, height: 200, width: 200, crop: :fill, class: "avatar-large dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-         <%#= link_to "Profile", user_path(current_user.id), class: "dropdown-item" %>
+        <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdown">
+         <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
         </div>
     </div>
