FEAT: profile edit page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,8 +49,8 @@
         </div> -->
       </div>
     </div>
-    <div>
-      <%#= link_to "Edit", edit_user_path(@user), class: "btn btn-outlined" %>
+    <div class="mb-5">
+      <%= link_to "Edit", edit_user_registration_path, class: "btn btn-outlined" %>
     </div>
   </div>
 </div>
