--- a/app/assets/stylesheets/components/_utility.scss
+++ b/app/assets/stylesheets/components/_utility.scss
@@ -52,3 +52,9 @@ a:hover {
 .border-radius {
     border-radius: 8px;
 }
+
+.grid-two {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+}
