--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,7 +4,8 @@
         search_title: 'Find events to join',
         path: events_path,
         search_placeholder: 'Search events',
-        elements: @search_events
+        elements: @search_events,
+        class_type: 'reminder-card-text-image-stack'
     }
 %>
 
