--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -4,7 +4,8 @@
         search_title: 'Discover destinations',
         path: locations_path,
         search_placeholder: 'Search locations',
-        elements: @locations
+        elements: @locations,
+        class_type: ''
     }
 %>
 
