--- a/app/views/shared/search/_search_locations.html.erb
+++ b/app/views/shared/search/_search_locations.html.erb
@@ -3,6 +3,7 @@
         search_title: 'Discover, destinations',
         path: locations_path,
         search_placeholder: 'Search locations',
+        class_type: ''
     }
 %>
 
