--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -4,7 +4,8 @@
         search_title: 'Find trip inspiration',
         path: trips_path,
         search_placeholder: 'Search trips',
-        elements: @search_trips
+        elements: @search_trips,
+        class_type: ''
     }
 %>
 
