--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -29,7 +29,7 @@
 }
 
 .banner__image {
-    height: 100%;
+    height: 60vh;
     width: 100%;
     background-size: cover;
     background-color: $darkest-teal;
