--- a/app/views/shared/cards/_activity_card.html.erb
+++ b/app/views/shared/cards/_activity_card.html.erb
@@ -1,8 +1,10 @@
-<div
-  class="photo-card"
-  style="background-image: linear-gradient(rgba(0,0,0,0.3),
-    rgba(0,0,0,0.3)),
-    url('<%= cl_image_path activity.photo.key %>')">
-  <%= activity.title %>
-  <%= link_to "", activity_path(activity), class: "make-card-clickable" %>
+<div class="activity-card">
+  <div
+    class="photo-card"
+    style="background-image: linear-gradient(rgba(0,0,0,0.3),
+      rgba(0,0,0,0.3)),
+      url('<%= cl_image_path activity.photo.key %>')">
+    <%= activity.title %>
+    <%= link_to "", activity_path(activity), class: "make-card-clickable" %>
+  </div>
 </div>
