--- a/app/views/shared/search/_search_main.html.erb
+++ b/app/views/shared/search/_search_main.html.erb
@@ -27,10 +27,15 @@ url('<%= cl_image_path Activity.background_image, crop: :fill%>')">
             <div class="featured-title-home d-flex justify-content-between align-items-center">
                 <h4>Search results</h4>
             </div>
-            <div class="<%= 'card__grid' unless elements.first.class_string == 'event' %>">
+            <div class="<%= elements.first.class_string == 'event' ? 'grid-two' : 'card__grid'  %>">
                 <% if elements.any? %>
                     <% elements[0..elements.count].each do |element| %>
-                        <%= render "shared/cards/#{element.class_string}_card", element: element %>
+                        <%= render partial: "shared/cards/#{element.class_string}_card", 
+                            locals: { 
+                                element: element,
+                                class_type: class_type
+                            }
+                        %>
                     <% end %>
                 <% else %>
             </div>
