FEAT: previous events dash

--- a/app/views/dashboards/show/_past_events.html.erb
+++ b/app/views/dashboards/show/_past_events.html.erb
@@ -1,15 +1,15 @@
 <div class="itinerary">
 
-    <% if @events.where('Events.start_date >= ?', DateTime.now).count == 0 %>
+    <% if @events.where('Events.start_date < ?', DateTime.now).count == 0 %>
         <div class="empty-state pt-5 pb-5 mt-5 mb-5">
-            <p><strong>You have 0 travel plans</strong></p>
+            <p><strong>You have 0 previous events.</strong></p>
         </div>
     <% else %>
         <div class="container__dashboard">
             <div class="display__itinerary">
                 <%= render partial: 'shared/events/grouped_events_all', 
                     locals: { 
-                        events: @events,
+                        events: @past_events,
                         user: @user,
                         class_type: "reminder-card-text-image"
                     }
@@ -18,11 +18,7 @@
 
             <div class="mt-4">
                 <div id="js-calendar" class="dash__calendar mb-5">
-                    <%= render 'locations/by_location/calendar_locations', location_events: @events %>
-                </div>
-
-                <div class="map">
-                    <%= render 'shared/components/map' %>
+                    <%= render 'locations/by_location/calendar_locations', location_events: @past_events %>
                 </div>
             </div>
         </div>
