--- a/app/views/dashboards/show/_tabs.html.erb
+++ b/app/views/dashboards/show/_tabs.html.erb
@@ -17,9 +17,14 @@
       </li>
       <li class="nav-item">
         <a class="dash-inner-nav" id="pills-favourites-tab" data-toggle="pill" href="#pills-favourites" role="tab" aria-controls="pills-favourites" aria-selected="false">
-          Favourites (<%= @user.num_favs %> )
+          Favourites (<%= @user.num_favs %>)
         </a>
       </li>
+    <li class="nav-item">
+      <a class="dash-inner-nav" id="pills-past-events-tab" data-toggle="pill" href="#pills-past-events" role="tab" aria-controls="pills-past-events" aria-selected="false">
+        Past events (<%= @user.past_events.count %>)
+      </a>
+    </li>
 <!--
       <li class="nav-item">
         <a class="dash-inner-nav" id="pills-followers-tab" data-toggle="pill" href="#pills-followers" role="tab" aria-controls="pills-follower" aria-selected="false">
@@ -41,6 +46,9 @@
       </div>
       <div class="tab-pane fade" id="pills-favourites" role="tabpanel" aria-labelledby="pills-favourites-tab">
         <%= render 'dashboards/show/favorites' %>
+      </div>
+      <div class="tab-pane fade" id="pills-past-events" role="tabpanel" aria-labelledby="pills-past-events-tab">
+        <%= render 'dashboards/show/past_events' %>
       </div>
       <div class="tab-pane fade" id="pills-followers" role="tabpanel" aria-labelledby="pills-followers-tab">
         <%#= render 'followers' %>
